--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass-loader": "^10.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-material-design-icons": "^4.11.0",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
