--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "vue": "^3.0.7",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -30,7 +34,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^5.0.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^10.1.1",
     "typescript": "~3.9.3"
   }
 }
