--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ VUE_APP_TITLE=Stack
 VUE_APP_SUB_TITLE=Track
 
 # Application Settings
-#VUE_APP_BACKEND_URL= # Default: http://localhost:5000/
+VUE_APP_BACKEND_URL=http://localhost:5000/
